# redshift

./: .gitignore  Makefile.am  configure.ac
contrib/: redshift.spec
src/: Makefile.am  commands.c  commands.h  location-corelocation.m  location-geoclue2.c  location-manual.c  options.c  options.h  pipeutils.c  redshift-dbus.c  redshift.c  redshift.h  utils.c  utils.h
src/redshift-gtk/: Makefile.am  controller.py  controller_dbus.py  dbus_backlight.py  redshift-backlight-proxy.in  redshift-gtk-dbus.in  statusicon.py  statusicon_dbus.py
